--- a/frontend/admin/admin.html
+++ b/frontend/admin/admin.html
@@ -21,9 +21,9 @@
       <table class="w-full border-collapse">
         <thead class="bg-gray-800 text-gray-200">
           <tr>
-            <th class="border px-4 py-2 w-1/3">Name</th>
-            <th class="border px-4 py-2 w-1/3">Email</th>
-            <th class="border px-4 py-2 w-1/3">Actions</th>
+            <th class="border px-4 py-2 w-1/2">Name</th>
+            <th class="border px-4 py-2 w-1/2">Email</th>
+            <th class="border px-4 py-2 w-1/2">Actions</th>
           </tr>
         </thead>
         <tbody id = "teacher-table">
@@ -52,10 +52,11 @@
           <tr>
             <th class="border px-4 py-2 w-1/3">Name</th>
             <th class="border px-4 py-2 w-1/3">Email</th>
+            <th class="border px-4 py-2 w-1/3">Grade</th>
             <th class="border px-4 py-2 w-1/3">Actions</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="student-table">
           <!-- Add table rows here -->
         </tbody>
       </table>
@@ -73,7 +74,7 @@
           <input type="password" name="password" class="block w-full py-2 px-3 rounded-full bg-gray-800 text-gray-200 focus:outline-none focus:shadow-outline-gray" required>
           <label for="grade" class="block mb-2 text-sm font-bold text-gray-200 mt-4">Grade:</label>
           <input type="text" name="grade" class="block w-full py-2 px-3 rounded-full bg-gray-800 text-gray-200 focus:outline-none focus:shadow-outline-gray" required>
-          <button type="submit" class="px-4 py-2 bg-green-500 text-gray-200 hover:bg-green-600 hover:text-white rounded-full focus:outline-none focus:shadow-outline-gray active:bg-green-600 mt-4">Create</button>
+          <button id="submit-student" type="submit" class="px-4 py-2 bg-green-500 text-gray-200 hover:bg-green-600 hover:text-white rounded-full focus:outline-none focus:shadow-outline-gray active:bg-green-600 mt-4">Create</button>
         </form>
       </div>
 
@@ -82,30 +83,31 @@
         <thead class="bg-gray-800 text-gray-200">
           <tr>
             <th class="border px-4 py-2 w-1/3">Name</th>
+            <th class="border px-4 py-2 w-1/3">Grade</th>
             <th class="border px-4 py-2 w-1/3">Teacher</th>
             <th class="border px-4 py-2 w-1/3">Actions</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="subject-table">
           <!-- Add table rows here -->
         </tbody>
       </table>
-      <button id="create-subject-btn" class="px-4 py-2 bg-green-500 text-gray-200 hover:bg-green-600 hover:text-white rounded-full focus:outline-none focus:shadow-outline-gray active:bg-green-600 mt-4">Create New Subject</button>
+      <button id="create-subject-btn" class="px-4 py-2 bg-green-500 text-gray-200 hover:bg-green-600 hover:text-white rounded-full focus:outline-none focus:shadow-outline-gray active:bg-green-600 mt-4 mb-2">Create New Subject</button>
 
       <!-- Add the form HTML here -->
       <div id="create-subject-form" style="display: none;">
-        <form class="create-form mt-4 rounded-lg shadow-xl bg-gray-900 border-gray-700 p-4" action="/api/subject" method="POST">
+        <form class="create-form mt-2 mb-10 rounded-lg shadow-xl bg-gray-900 border-gray-700 p-4" action="/api/subject" method="POST">
           <button type="button" class="close-btn float-right px-2 py-1 text-gray-200 hover:text-white focus:outline-none focus:shadow-outline-gray" aria-label="Close">&times;</button>
           <label for="text" class="block mb-2 text-sm font-bold text-gray-200 mt-4">Name:</label>
           <input type="text" name="name" class="block w-full py-2 px-3 rounded-full bg-gray-800 text-gray-200 focus:outline-none focus:shadow-outline-gray" required>
           <label for="grade" class="block mb-2 text-sm font-bold text-gray-200 mt-4">Grade:</label>
           <input type="text" name="grade" class="block w-full py-2 px-3 rounded-full bg-gray-800 text-gray-200 focus:outline-none focus:shadow-outline-gray" required>
           <label for="teacher" class="block mb-2 text-sm font-bold text-gray-200 mt-4">Teacher:</label>
-          <select name="teacher" class="block w-full py-2 px-3 rounded-full bg-gray-800 text-gray-200 focus:outline-none focus:shadow-outline-gray" required>
+          <select id="select-teacher" name="teacher" class="block w-full py-2 px-3 rounded-full bg-gray-800 text-gray-200 focus:outline-none focus:shadow-outline-gray" required>
             <option value="">Select a teacher</option>
             <!-- Add options for teachers here -->
           </select>
-          <button type="submit" class="px-4 py-2 bg-green-500 text-gray-200 hover:bg-green-600 hover:text-white rounded-full focus:outline-none focus:shadow-outline-gray active:bg-green-600 mt-4">Create</button>
+          <button id="submit-subject" type="submit" class="px-4 py-2 bg-green-500 text-gray-200 hover:bg-green-600 hover:text-white rounded-full focus:outline-none focus:shadow-outline-gray active:bg-green-600 mt-4">Create</button>
         </form>
       </div>
     </div>
