--- a/frontend/student/student.html
+++ b/frontend/student/student.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Teacher Dashboard</title>
     <!-- Include the Tailwind CSS file -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
     <script src="../const.js"></script>
     <script src="student.js" defer></script>
     <script src="../logout.js"></script>
@@ -23,7 +26,7 @@
         </div>
       </div>
       <!-- Middle column: list of exercises -->
-      <div class="w-1/2 bg-gray-700 dark:bg-gray-900 p-4" style="display: none;" id="middle-column">
+      <div class="w-1/2 bg-gray-700 dark:bg-gray-900 p-4" style="visibility: hidden;" id="middle-column">
         <table class="w-full">
             <thead>
               <tr>
